# openapi.yaml
@@ -5,6 +5,8 @@ info:
 paths:
   /users:
     get:
+      tags:
+        - Users
       summary: Lista todos os usuários
       security:
         - bearerAuth: []
@@ -16,6 +18,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/UserList'
     post:
+      tags:
+        - Users
       summary: Cria um novo usuário
       security:
         - bearerAuth: []
@@ -36,6 +40,8 @@ paths:
 
   /users/{id}:
     get:
+      tags:
+        - Users
       summary: Retorna um usuário específico pelo ID.
       security:
         - bearerAuth: []
@@ -56,6 +62,8 @@ paths:
         '404':
           description: Usuário não encontrado.
     put:
+      tags:
+        - Users
       summary: Atualiza os dados de um usuário pelo ID.
       security:
         - bearerAuth: []
@@ -83,6 +91,8 @@ paths:
         '404':
           description: Usuário não encontrado.
     delete:
+      tags:
+        - Users
       summary: Exclui um usuário pelo ID.
       security:
         - bearerAuth: []
@@ -101,6 +111,8 @@ paths:
 
   /login:
     post:
+      tags:
+        - Login
       summary: Faz login para um novo usuário
       security:
         - bearerAuth: []
@@ -121,6 +133,8 @@ paths:
 
   /items:
     get:
+      tags:
+        - Items
       summary: Retorna todos os itens
       responses:
         '200':
@@ -128,6 +142,8 @@ paths:
         '500':
           description: Erro de servidor
     post:
+      tags:
+        - Items
       summary: Cria um novo item
       requestBody:
         description: Dados do item
@@ -146,6 +162,8 @@ paths:
 
   /items/{id}:
     get:
+      tags:
+        - Items
       summary: Retorna um item pelo ID
       parameters:
         - in: path
@@ -162,6 +180,8 @@ paths:
         '500':
           description: Erro de servidor
     put:
+      tags:
+        - Items
       summary: Atualiza um item pelo ID
       parameters:
         - in: path
@@ -187,6 +207,8 @@ paths:
         '500':
           description: Erro de servidor
     delete:
+      tags:
+        - Items
       summary: Deleta um item pelo ID
       parameters:
         - in: path
@@ -205,6 +227,8 @@ paths:
 
   /favorites:
     get:
+      tags:
+        - Favorites
       summary: Retorna todos os favoritos
       responses:
         '200':
@@ -212,6 +236,8 @@ paths:
         '500':
           description: Erro de servidor
     post:
+      tags:
+        - Favorites
       summary: Adiciona um novo favorito
       requestBody:
         description: Dados do favorito
@@ -230,6 +256,8 @@ paths:
 
   /favorites/{id}:
     delete:
+      tags:
+        - Favorites
       summary: Remove um favorito pelo ID
       parameters:
         - in: path
@@ -248,6 +276,8 @@ paths:
 
   /categories:
     get:
+      tags:
+        - Categories
       summary: Retorna todas as categorias
       responses:
         '200':
@@ -255,6 +285,8 @@ paths:
         '500':
           description: Erro de servidor
     post:
+      tags:
+        - Categories
       summary: Cria uma nova categoria
       requestBody:
         description: Dados da categoria
@@ -273,6 +305,8 @@ paths:
 
   /categories/{id}:
     get:
+      tags:
+        - Categories
       summary: Retorna uma categoria pelo ID
       parameters:
         - in: path
@@ -289,6 +323,8 @@ paths:
         '500':
           description: Erro de servidor
     put:
+      tags:
+        - Categories
       summary: Atualiza uma categoria pelo ID
       parameters:
         - in: path
@@ -314,6 +350,8 @@ paths:
         '500':
           description: Erro de servidor
     delete:
+      tags:
+        - Categories
       summary: Deleta uma categoria pelo ID
       parameters:
         - in: path
@@ -332,6 +370,8 @@ paths:
 
   /authors:
     get:
+      tags:
+        - Authors
       summary: Retorna todos os autores
       responses:
         '200':
@@ -339,6 +379,8 @@ paths:
         '500':
           description: Erro de servidor
     post:
+      tags:
+        - Authors
       summary: Cria um novo autor
       requestBody:
         description: Dados do autor
@@ -357,6 +399,8 @@ paths:
 
   /authors/{id}:
     get:
+      tags:
+        - Authors
       summary: Retorna um autor pelo ID
       parameters:
         - in: path
@@ -373,6 +417,8 @@ paths:
         '500':
           description: Erro de servidor
     put:
+      tags:
+        - Authors
       summary: Atualiza um autor pelo ID
       parameters:
         - in: path
@@ -398,6 +444,8 @@ paths:
         '500':
           description: Erro de servidor
     delete:
+      tags:
+        - Authors
       summary: Deleta um autor pelo ID
       parameters:
         - in: path
