# src/models/ItemModel.ts
@@ -3,12 +3,11 @@ import sequelize from '../config/database';
 import CategoryModel from "./CategoryModel";
 import FavoritesModel from "./FavoritesModel";
 import AuthorModel from "./AuthorModel";
-import UserModel from "./UserModel";
 
 class ItemModel extends Model{
     id: number | undefined
     name: string | undefined
-    time: number | undefined
+    time: string | undefined
     directory: string | undefined
     image: string | undefined
     category_id: number | undefined
@@ -28,7 +27,7 @@ ItemModel.init(
             allowNull: false
         },
         time:{
-            type: DataTypes.TIME,
+            type: DataTypes.INTEGER,
             allowNull: false,
         },
         directory:{
@@ -59,35 +58,6 @@ ItemModel.init(
     }
 )
 
-// ItemModel.belongsTo(CategoryModel, {
-//     foreignKey: 'category_id', 
-//     as: 'category'
-// })
-// CategoryModel.hasMany(ItemModel, {
-//     foreignKey: 'category_id',
-//     as: 'item'
-// })
-
-// ItemModel.belongsTo(FavoritesModel, {
-//     foreignKey: 'favorites_id', 
-//     as: 'favorite'
-// })
-// FavoritesModel.hasMany(ItemModel, {
-//     foreignKey: 'favorites_id',
-//     as: 'item'
-// })
-
-// ItemModel.belongsTo(AuthorModel, {
-//     foreignKey: 'author_id', 
-//     as: 'author'
-// })
-// AuthorModel.hasMany(ItemModel, {
-//     foreignKey: 'author_id',
-//     as: 'item'
-// })
-
-
-
 ItemModel.belongsTo(AuthorModel, {
     foreignKey: "author_id",
     as: "author"
@@ -96,7 +66,6 @@ AuthorModel.hasMany(ItemModel, {
     foreignKey: "author_id",
     as: "items"
 });
-
 
 ItemModel.belongsTo(FavoritesModel, {
     foreignKey: 'favorites_id', 
@@ -107,18 +76,6 @@ FavoritesModel.hasMany(ItemModel, {
     as: 'item'
 })
 
-
-
-
-// UserModel.hasMany(FavoritesModel, {
-//     foreignKey: "user_id",
-//     as: "favorites"
-// });
-// FavoritesModel.belongsTo(UserModel, {
-//     foreignKey: "user_id",
-//     as: "user"
-// });
-
 ItemModel.belongsTo(CategoryModel, {
     foreignKey: "category_id",
     as: "category"
@@ -127,28 +84,5 @@ CategoryModel.hasMany(ItemModel, {
     foreignKey: "category_id",
     as: "items"
 });
-
-
-
-
-
-
-
-
-
-// // Relacionamento Item - Favorites (muitos-para-um ou many-to-many, conforme o domínio)
-// // No exemplo abaixo, usamos many-to-one. Se desejar many-to-many, use belongsToMany e defina a tabela intermediária.
-// ItemModel.belongsTo(FavoritesModel, {
-//     foreignKey: "favorites_id",
-//     as: "favorite"
-// });
-// FavoritesModel.hasMany(ItemModel, {
-//     foreignKey: "favorites_id",
-//     as: "items" // Alterado para alias único
-// });
-
-
-
-
 
 export default ItemModel;
