# src/routes/authorRoutes.ts
@@ -4,11 +4,13 @@ import { authMiddleware } from '../middleware/authMiddleware'
 
 const router = express.Router();
 
-router.get("/authors", authMiddleware, getAll);
+router.get("/authors", getAll);
+router.get("/authors/:id", getAuthorById);
 router.post("/authors", authMiddleware, createAuthor);
-router.get("/authors/:id", authMiddleware, getAuthorById);
 router.put("/authors/:id", authMiddleware, updateAuthor);
 router.delete("/authors/:id", authMiddleware, deleteAuthorById);
+
+// DOCUMETACAO SWAGGER
 
 /**
  * @openapi
